--- a/index.html
+++ b/index.html
@@ -14,7 +14,39 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="weather-app">
+        <h1>Bressanone, South Tirol</h1>
+        <ul>
+          <li>Friday 05:00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+              alt="Clear"
+            />
+            12°C | °F
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Percipitation: 11%</li>
+              <li>Humidity: 34%</li>
+              <li>Wind: 11 km/h</li>
+            </ul>
+          </div>
+        </div>
+        <small>
+          <a
+            href="https://github.com/yasminemediamacs/shecodesplus-weather-app"
+            target="_blank"
+            >Open-source code
+          </a>
+          by Yasmine Senter
+        </small>
+      </div>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
