--- a/index.html
+++ b/index.html
@@ -15,26 +15,36 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>Bressanone, South Tirol</h1>
-        <ul>
-          <li>Friday 05:00</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-              alt="Clear"
-            />
-            12°C | °F
-          </div>
-          <div class="col-6">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>Bressanone, South Tirol</h1>
             <ul>
-              <li>Percipitation: 11%</li>
-              <li>Humidity: 34%</li>
-              <li>Wind: 11 km/h</li>
+              <li>Friday 05:00</li>
+              <li>Clear</li>
             </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                  alt="Clear"
+                  class="float-left"
+                />
+                <div class="float-left">
+                  <strong>12</strong
+                  ><span class="units">°C | <a href="">°F</a></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Percipitation: 11%</li>
+                <li>Humidity: 34%</li>
+                <li>Wind: 11 km/h</li>
+              </ul>
+            </div>
           </div>
         </div>
         <small>
