--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input
                   type="submit"
                   value="Search"
-                  class="btn btn-primary w-100"
+                  class="btn btn-dark w-100"
                 />
               </div>
             </div>
