Added the country and updated the CSS

--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
             </div>
           </form>
           <div class="overview">
+            <h1>
+              <span id="city"></span>,
+              <span id="country"></span>
+            </h1>
             <div class="row">
               <div class="col-6">
-                <h1 id="city">, <span id="country"></span></h1>
                 <ul>
                   <li>Last updated: <span id="date"></span></li>
                   <li id="description"></li>
@@ -61,13 +64,12 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div>
             <ul>
               <li>Humidity: <span id="humidity"></span>%</li>
               <li>Wind: <span id="wind"></span> km/h</li>
             </ul>
           </div>
+          <div></div>
         </div>
         <small>
           <a
