--- a/index.html
+++ b/index.html
@@ -69,7 +69,24 @@
               <li>Wind: <span id="wind"></span> km/h</li>
             </ul>
           </div>
-          <div></div>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">
+                  Thursday
+                  <img
+                    src="http://openweathermap.org/img/wn/04d@2x.png"
+                    alt=""
+                    width="42px"
+                  />
+                  <div class="weather-forecast-temperature">
+                    <span class="weather-forecast-temperature-max">18°</span
+                    ><span class="weather-forecast-temperature-min"> 12°</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <small>
           <a
