--- a/index.html
+++ b/index.html
@@ -69,24 +69,7 @@
               <li>Wind: <span id="wind"></span> km/h</li>
             </ul>
           </div>
-          <div class="weather-forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class="weather-forecast-date">
-                  Thursday
-                  <img
-                    src="http://openweathermap.org/img/wn/04d@2x.png"
-                    alt=""
-                    width="42px"
-                  />
-                  <div class="weather-forecast-temperature">
-                    <span class="weather-forecast-temperature-max">18°</span
-                    ><span class="weather-forecast-temperature-min"> 12°</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="weather-forecast" id="forecast"></div>
         </div>
         <small>
           <a
