Updated the CSS and added a media query

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <span id="city"></span>,
               <span id="country"></span>
             </h1>
-            <div class="row">
+            <div class="row" id="information">
               <div class="col-6">
                 <ul>
                   <li>Last updated: <span id="date"></span></li>
