Added more space to the date

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <span id="country"></span>
             </h1>
             <div class="row" id="information">
-              <div class="col-6">
+              <div class="col-6 date">
                 <ul>
                   <li>Last updated: <span id="date"></span></li>
                   <li id="description"></li>
